...
    <string name="LIVING">Wohnen</string>
    <string name="HOUSEHOLD">Haushalt</string>
    <string name="CULTURE">Kultur</string>
    <string name="EDUCATION">Bildung</string>
    <string name="SOCIALLIFE">Sozialleben</string>
    <string name="MOBILITY">Mobilität</string>
    <string name="CLOTHES">Kleidung</string>
    <string name="GIFT">Geschenk</string>
    <string name="OTHER">Sonstige</string>
    <string name="RESTAURANT">Restaurant</string>
    <string name="adding_expense">Ausgabe</string>
    <string name="adding_income">Einnahme</string>
    <string name="adding_amount">Betrag (€)</string>
...
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="add_attachments_button">Anhänge hinzufügen Button</string>
    <string name="saveButton">Speichern</string>
    <string name="cancelButton">Abbrechen</string>
    <string name="place">Geschäft</string>
    <string name="source">Quelle</string>
    <string name="selectDate">Datum auswählen</string>
    <string name="DatePickerPositiveButtonText">OK</string>
    <string name="datePickerNegativeButtonText">Abbrechen</string>
    <string name="FAB_add_cashflow">Add Cashflow</string>
...
    <string name="change_view_button_description">Ansicht ändern</string>
    <string name="recyclerview_initial_placeholder">I</string>
    <string name="recyclerview_title_placeholder">title</string>
    <string name="recyclerview_date_placeholder">date</string>
    <string name="recyclerview_value_placeholder">-20.00€</string>

    <string name="dashboard_filter_dialog_title">Nach Kategorien filtern</string>
    <string name="dashboard_filter_indication_categories">%1$o Kategorie(n) werden nicht angezeigt</string>
    <string name="apply">Übernehmen</string>
    <string name="invalid_input_error">Ungültige Angaben gemacht!</string>
    <string name="missing_token_error">Authentifizierungsfehler</string>
    <string name="already_registered_question">Bereits registriert?</string>
    <string name="click_here_for_login">Klicke hier zum einloggen!</string>
    <string name="no_account_yet_question">Noch kein Konto?</string>
    <string name="click_here_to_register">Jetzt registrieren!</string>
...
    <string name="error_message_server_error">Server Fehler</string>
    <string name="error_message_unknown_error_occurred">Ein unbekannter Fehler ist aufgetreten</string>
    <string name="registration_currently_unavailable">Registrierung zur Zeit nicht möglich</string>
    <string name="delete_user_button">Konto löschen</string>
    <string name="deleting_user_currently_unavailable">Löschen des Users zur Zeit nicht möglich</string>
    <string name="user_successfully_deleted">Konto erfolgreich gelöscht</string>
    <string name="delete_user_confirmation_title">Konto löschen?</string>
    <string name="delete_user_confirmation_text">Bist du sicher, dass du dein Konto Löschen möchtest? Alle deine Daten werden damit gelöscht und du wirst keinen Zugriff mehr auf sie haben!</string>
    <string name="logout">Ausloggen</string>
    <string name="delete_user_confirm_button">Benutzer löschen</string>
    <string name="cancel_button">Abbrechen</string>
    <string name="account">Konto</string>
    <string name="edit_item_description">Artikel bearbeiten</string>
    <string name="recyclerview_price_placeholder">2,50 €</string>
    <string name="recyclerview_item_name_placeholder">item name</string>
    <string name="add_item_button_description">Artikel hinzufügen</string>
...
