...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/openFilterOptions"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/change_view_button_description"
...
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/diagramLayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <com.github.mikephil.charting.charts.PieChart
              android:id="@+id/dashboard_pieChart"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginStart="16dp"
              android:layout_marginTop="64dp"
              android:layout_marginEnd="16dp"
              android:layout_marginBottom="32dp"
...
