...
  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/title_home" />

  <item
    android:id="@+id/navigation_dashboard"
    android:icon="@drawable/ic_dashboard_black_24dp"
    android:title="@string/title_dashboard" />

  <item
    android:id="@+id/navigation_settings"
    android:icon="@drawable/ic_settings_black_24dp"
    android:title="@string/title_settings" />

</menu>
