<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="12dp"
    android:paddingStart="12dp"
    android:layout_marginBottom="80dp"
    tools:context=".ui.settings.SettingsFragment">

  <com.google.android.material.button.MaterialButton
      android:id="@+id/logout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/logout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/Widget.Material3.Button.ElevatedButton"
      android:layout_marginTop="12dp" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/deleteUser"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_user_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logout"
      android:layout_marginTop="12dp"
      style="@style/Widget.Material3.Button.TonalButton" />
</androidx.constraintlayout.widget.ConstraintLayout>